# C-Containers

./: .gitignore  LICENSE  README.md  _clang-format
src/: CMakeLists.txt  GenerateProjects.bat  GenerateProjects.sh  MyMallocator.hpp  dense_map.hpp  main.cpp  vector.hpp
src/test/: dense_map_perf.cpp  dense_map_test.cpp  randomised_input.hpp  test_helpers.cpp  test_helpers.hpp  vector_accessor_test.cpp  vector_addremove_test.cpp  vector_assignment_test.cpp  vector_constructors_test.cpp  vector_dimension_test.cpp  vector_iterator_test.cpp  vector_relational_test.cpp  vector_test.cpp
